# xls_reader

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  config.py  db.py  docker-compose.yml  pyproject.toml  script.sh
app/: loader.py  models.py  parser.py  queries.py  utils.py
app/scripts/: enterpoint.py  entrypoint.py
