[tool.poetry]
name = "xls-reader"
version = "0.1.0"
description = ""
authors = ["Sergey Radyukhin <22dollars@mail.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
openpyxl = "^3.1.0"
python-dotenv = "^0.21.1"
sqlalchemy = "^2.0.1"
faker = "^16.6.1"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[tool.poetry.scripts]
parser = "app.scripts.enterpoint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
